# bevy_playground_2

./: Cargo.toml  build.rs
.github/workflows/: release.yaml
assets/shaders/: custom_material_screenspace_texture.wgsl  my_compute_shader.wgsl
src/: compute.rs  main.rs
