[package]
name = "bevy_playground_2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy_engine" }

# Enable only a small amount of optimization in debug mode, so we can step
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3